@@ -2,6 +2,7 @@
 #
 # This is an example of a script to run a "unsecure" TURN UDP client.
 # Options:
+# 0) -D means "mandatory padding", like pjnath does;
 # 1) -t is absent, it means that UDP networking is used.
 # 5) -n 1000 means 1000 messages per single emulated client. Messages
 # are sent with interval of 20 milliseconds, to emulate an RTP stream.
@@ -22,5 +23,5 @@ fi
 
 export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/usr/local/lib/
 
-PATH=examples/bin/:../bin/:bin/:${PATH} turnutils_uclient -n 1000 -m 10 -l 170 -e 127.0.0.1 -g ::1
+PATH=examples/bin/:../bin/:bin/:${PATH} turnutils_uclient -D -n 1000 -m 10 -l 171 -e 127.0.0.1 -g ::1
 
