@@ -69,6 +69,7 @@ extern u08bits relay_transport;
 extern unsigned char client_ifname[1025];
 extern struct event_base* client_event_base;
 extern int passive_tcp;
+extern int mandatory_channel_padding;
 
 #define is_TCP_relay() (relay_transport == STUN_ATTRIBUTE_TRANSPORT_TCP_VALUE)
 
